SubBt/force-app/main/default/objects/Select_Sheet__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Active indicates that this Selection Sheet is available for cloning.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>