SubBt/force-app/main/default/objects/Select_Sheet__c/fields/Allowance__c.field-meta.xml
<CustomField>
    <fullName>Allowance__c</fullName>
    <inlineHelpText>The amount the Buyer has available for the Selection Item choices.</inlineHelpText>
    <label>Allowance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>