SubBt/force-app/main/default/objects/Select_Sheet__c/fields/BL_DISCOUNT__c.field-meta.xml
<CustomField>
    <fullName>BL_DISCOUNT__c</fullName>
    <label>Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>