SubBt/force-app/main/default/objects/Select_Sheet__c/fields/BL_DISCOUNT_AMOUNT__c.field-meta.xml
<CustomField>
    <fullName>BL_DISCOUNT_AMOUNT__c</fullName>
    <formula>BL_UNIT_COST__c *  BL_DISCOUNT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>