SubBt/force-app/main/default/objects/Select_Sheet__c/fields/BL_LIST_PRICE__c.field-meta.xml
<CustomField>
    <fullName>BL_LIST_PRICE__c</fullName>
    <label>List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>