SubBt/force-app/main/default/objects/Select_Sheet__c/fields/BL_LIST_PRICE_F__c.field-meta.xml
<CustomField>
    <fullName>BL_LIST_PRICE_F__c</fullName>
    <formula>( BL_UNIT_COST__c + BL_MARKUP_AMOUNT__c )-  BL_DISCOUNT_AMOUNT__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>