SubBt/force-app/main/default/objects/Select_Sheet__c/fields/BL_MARKUP_AMOUNT__c.field-meta.xml
<CustomField>
    <fullName>BL_MARKUP_AMOUNT__c</fullName>
    <formula>BL_MARKUP__c *  BL_UNIT_COST__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Markup Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>