SubBt/force-app/main/default/objects/Select_Sheet__c/fields/BL_UNIT_COST__c.field-meta.xml
<CustomField>
    <fullName>BL_UNIT_COST__c</fullName>
    <label>Unit Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>