SubBt/force-app/main/default/objects/Select_Sheet__c/fields/BT_Quote_Line__c.field-meta.xml
<CustomField>
    <fullName>BT_Quote_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BT Quote Line</label>
    <referenceTo>Quote_Item__c</referenceTo>
    <relationshipLabel>BOM Lines</relationshipLabel>
    <relationshipName>BOM_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>