SubBt/force-app/main/default/objects/Select_Sheet__c/fields/Build_Phase__c.field-meta.xml
<CustomField>
    <fullName>Build_Phase__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Build Phase</label>
    <referenceTo>Build_Phase__c</referenceTo>
    <relationshipName>Product_Option_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>