SubBt/force-app/main/default/objects/Select_Sheet__c/fields/Build_Reference_1__c.field-meta.xml
<CustomField>
    <fullName>Build_Reference_1__c</fullName>
    <label>Build Reference 1</label>
    <length>250</length>
    <type>Text</type>
</CustomField>