SubBt/force-app/main/default/objects/Select_Sheet__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Category</label>
    <referenceTo>Category__c</referenceTo>
    <relationshipName>Selections</relationshipName>
    <type>Lookup</type>
</CustomField>