SubBt/force-app/main/default/objects/Select_Sheet__c/fields/Edge__c.field-meta.xml
<CustomField>
    <fullName>Edge__c</fullName>
    <formula>TEXT(Takeoff_Line__r.Edge__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Edge</label>
    <type>Text</type>
</CustomField>