SubBt/force-app/main/default/objects/Select_Sheet__c/fields/Install_Location__c.field-meta.xml
<CustomField>
    <fullName>Install_Location__c</fullName>
    <label>Install Location</label>
    <length>250</length>
    <type>Text</type>
</CustomField>