SubBt/force-app/main/default/objects/Select_Sheet__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Lookup Field</inlineHelpText>
    <label>Location</label>
    <referenceTo>Location</referenceTo>
    <relationshipName>Selection_Sheet_Takeoff_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>