SubBt/force-app/main/default/objects/Select_Sheet__c/fields/Location_Detail_Reference_1__c.field-meta.xml
<CustomField>
    <fullName>Location_Detail_Reference_1__c</fullName>
    <label>Location Detail Reference 1</label>
    <length>250</length>
    <type>Text</type>
</CustomField>