SubBt/force-app/main/default/objects/Select_Sheet__c/fields/Locked__c.field-meta.xml
<CustomField>
    <fullName>Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Locked indicates that they Buyer cannot make changes.</inlineHelpText>
    <label>Locked</label>
    <type>Checkbox</type>
</CustomField>