SubBt/force-app/main/default/objects/Select_Sheet__c/fields/Option__c.field-meta.xml
<CustomField>
    <fullName>Option__c</fullName>
    <label>Option #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>