SubBt/force-app/main/default/objects/Select_Sheet__c/fields/Option_Details__c.field-meta.xml
<CustomField>
    <fullName>Option_Details__c</fullName>
    <label>Option Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>