SubBt/force-app/main/default/objects/Select_Sheet__c/fields/Plan__c.field-meta.xml
<CustomField>
    <fullName>Plan__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plan</label>
    <referenceTo>Plans__c</referenceTo>
    <relationshipName>Selections</relationshipName>
    <type>Lookup</type>
</CustomField>