SubBt/force-app/main/default/objects/Select_Sheet__c/fields/Pricebook_Name__c.field-meta.xml
<CustomField>
    <fullName>Pricebook_Name__c</fullName>
    <formula>/*buildertek__BT_Price_Book__r.Name*/
Takeoff_Line__r.Pricebook_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Pricebook Name</label>
    <type>Text</type>
</CustomField>