SubBt/force-app/main/default/objects/Select_Sheet__c/fields/Product_Code_SKU__c.field-meta.xml
<CustomField>
    <fullName>Product_Code_SKU__c</fullName>
    <formula>IF( Product__r.ProductCode != null,  Product__r.ProductCode , Product__r.StockKeepingUnit)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Code/SKU</label>
    <type>Text</type>
</CustomField>