SubBt/force-app/main/default/objects/Select_Sheet__c/fields/Product_Color__c.field-meta.xml
<CustomField>
    <fullName>Product_Color__c</fullName>
    <formula>Text(Product__r.BT_COLOR__c)</formula>
    <label>Product Color</label>
    <type>Text</type>
</CustomField>