SubBt/force-app/main/default/objects/Select_Sheet__c/fields/Product_SKU__c.field-meta.xml
<CustomField>
    <fullName>Product_SKU__c</fullName>
    <formula>Product__r.StockKeepingUnit</formula>
    <label>Product SKU</label>
    <type>Text</type>
</CustomField>