SubBt/force-app/main/default/objects/Select_Sheet__c/fields/Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Product_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Type</label>
    <referenceTo>Product_Type__c</referenceTo>
    <relationshipName>Selections</relationshipName>
    <type>Lookup</type>
</CustomField>