SubBt/force-app/main/default/objects/Select_Sheet__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Project the Selection Sheet is associated with.</inlineHelpText>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipName>Selection_Sheets</relationshipName>
    <type>Lookup</type>
</CustomField>