SubBt/force-app/main/default/objects/Select_Sheet__c/fields/Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>Purchase_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Purchase Order</label>
    <referenceTo>Purchase_Order__c</referenceTo>
    <relationshipName>Product_Option_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>