SubBt/force-app/main/default/objects/Select_Sheet__c/fields/QunUpdate__c.field-meta.xml
<CustomField>
    <fullName>QunUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>QunUpdate</label>
    <type>Checkbox</type>
</CustomField>