SubBt/force-app/main/default/objects/Select_Sheet__c/fields/Selection_Sheet_Takeoff__c.field-meta.xml
<CustomField>
    <fullName>Selection_Sheet_Takeoff__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BOM</label>
    <referenceTo>Project_Selection_Sheet_Takeoff__c</referenceTo>
    <relationshipLabel>BOM Lines</relationshipLabel>
    <relationshipName>Selection_Sheet_Takeoff_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>