SubBt/force-app/main/default/objects/Select_Sheet__c/fields/Service_Category__c.field-meta.xml
<CustomField>
    <fullName>Service_Category__c</fullName>
    <label>Service Category</label>
    <length>50</length>
    <type>Text</type>
</CustomField>