SubBt/force-app/main/default/objects/Select_Sheet__c/fields/Slab_SQF__c.field-meta.xml
<CustomField>
    <fullName>Slab_SQF__c</fullName>
    <label>Slab SQF</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>