SubBt/force-app/main/default/objects/Select_Sheet__c/fields/SQFUpdate__c.field-meta.xml
<CustomField>
    <fullName>SQFUpdate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SQFUpdate</label>
    <type>Checkbox</type>
</CustomField>