SubBt/force-app/main/default/objects/Select_Sheet__c/fields/Sum_Value__c.field-meta.xml
<CustomField>
    <fullName>Sum_Value__c</fullName>
    <label>Sum Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>