SubBt/force-app/main/default/objects/Select_Sheet__c/fields/Takeoff_Line__c.field-meta.xml
<CustomField>
    <fullName>Takeoff_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Takeoff Line</label>
    <referenceTo>Project_Takeoff_Lines__c</referenceTo>
    <relationshipName>Selection_Sheet_Takeoff_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>