SubBt/force-app/main/default/objects/Select_Sheet__c/fields/Tax__c.field-meta.xml
<CustomField>
    <fullName>Tax__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Tax</label>
    <type>Checkbox</type>
</CustomField>