SubBt/force-app/main/default/objects/Select_Sheet__c/fields/UOM_PL__c.field-meta.xml
<CustomField>
    <fullName>UOM_PL__c</fullName>
    <formula>Takeoff_Line__r.UOM__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>UOM</label>
    <type>Text</type>
</CustomField>