SubBt/force-app/main/default/objects/Select_Sheet__c/fields/Upgrade_Price__c.field-meta.xml
<CustomField>
    <fullName>Upgrade_Price__c</fullName>
    <label>Adjusted Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>