SubBt/force-app/main/default/objects/Select_Sheet__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Vendor associated with this Product</inlineHelpText>
    <label>Vendor</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Product_Option_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>