SubBt/force-app/main/default/objects/Select_Sheet__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Plan__c</columns>
    <columns>Category__c</columns>
    <columns>Product_Type__c</columns>
    <columns>Product__c</columns>
    <columns>Standard__c</columns>
    <columns>Upgrade_Price__c</columns>
    <columns>Selection_Sheet_Takeoff__c</columns>
    <columns>Takeoff_Line__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>